--- a/client/locale/ar.json
+++ b/client/locale/ar.json
@@ -1,38 +1,29 @@
 {
-  "login_logo": "تسجيل دخول",
-  "login_email": "البريد الالكتروني",
-  "login_password": "كلمة السر",
-  "login_button": "تسجيل",
+  "login_logo": "تسجيل الدخول",
+  "login_email": "البريد الإلكتروني",
+  "login_emailPlaceholder": "أدخل بريدك الإلكتروني",
+  "login_password": "كلمة المرور",
+  "login_passwordPlaceholder": "أدخل كلمة المرور",
+  "login_button": "إرسال",
+  "login_alert": "البريد الإلكتروني أو كلمة المرور غير صحيحة",
+  "login_alert_required": "البريد الإلكتروني أو كلمة المرور مطلوبة",
 
-  "problem_logo": "تقديم شكوى",
-  "problem_logo_home": "تقديم الان",
-  "problem_type": "الصنف",
-  "problem_name": "الاسم",
-  "problem_mobile": "رقم الهاتف",
-  "problem_subject": "العنوان",
-  "problem_description": "الوصف",
-  "problem_description_home": "الوصف",
-  "problem_button": "ارسال",
+  "dash_status": "الحالة",
+  "dash_sidebar_add": "إضافة علامات جديدة",
+  "dash_alert_no_map": "يرجى إضافة علامات جديدة",
+  "dash_alert_title": "تمت الإضافة",
+  "dash_alert_disc": "تمت إضافة هذه الخريطة إلى القائمة",
+  "dash_logout": "تسجيل الخروج",
+  "dash_select": "يرجى الاختيار",
+  "dash_select_completed": "مكتمل",
+  "dash_select_planned": "مخطط",
+  "dash_select_unfinished": "غير مكتمل",
+  "dash_select_title": "الفئة",
+  "dash_map_title": "الاسم",
+  "dash_pins_add": "الفئة",
+  "dash_image_drop": "انقر أو اسحب وأسقط خريطة هنا",
+  "dash_Save": "حفظ",
+  "dash_delete": "حذف",
 
-  "nav_title": "DNA",
-  "nav_home": "الرئيسية",
-  "nav_news": "الاخبار",
-  "nav_problem": "تقديم شكوى",
-  "nav_problem2": "الشكاوي",
-  "nav_notification": "الاشعار",
-  "nav_logout": "تسجيل خروج",
-
-  "footer_title": "وكالة اخبار ديالى",
-
-  "form_false": "اغلاق",
-  "form_true": "تاكيد",
-  "form_notification": "ارسال اشعار",
-  "form_image": "اضافة صورة",
-
-  "admin_news_st": "الاعدادات",
-  "admin_news_created_at": "التاريخ",
-  "admin_news_content": "المحتوى",
-  "admin_news_title": "العنوان",
-  "admin_news_btn_add": "اضافة",
-  "admin_news_no": "التسلسل"
+  "upload_image": "رفع الصور"
 }
