--- a/client/locale/en.json
+++ b/client/locale/en.json
@@ -1,37 +1,31 @@
 {
   "login_logo": "LOG IN",
-  "login_phoneNumber": "Phone Number",
-  "login_phoneNumberPlaceholder": "Enter your Phone Number",
+  "login_email": "Email",
+  "login_emailPlaceholder": "Enter your email",
   "login_password": "password",
   "login_passwordPlaceholder": "Enter your password",
-  "login_radio": "save login",
   "login_button": "submit",
+  "login_alert": "email or password not vilde",
+  "login_alert_required": "email or password is required",
 
-  "signup_logo": "SIGN UP",
-  "signup_name": "Name",
-  "signup_email": "Email",
-  "signup_mobile": "Phone Number",
-  "signup_password": "Password",
-  "signup_passwordConfirmation": "Password Confirmation",
-  "signup_location": "Location",
-  "signup_namePH": "Name",
-  "signup_emailPH": "Email",
-  "signup_mobilePH": "Phone Number",
-  "signup_passwordPH": "Password",
-  "signup_passwordConfirmationPH": "Password Confirmation",
-  "signup_locationPH1": "Location 1",
-  "signup_locationPH2": "Location 2",
-  "signup_button": "submit",
-  "signup_radio": "save signup",
+  "dash_status": "status",
+  "dash_sidebar_add": "Add New Pins",
+  "dash_alert_no_map": "Add New Pins",
+  "dash_alert_title": "is add",
+  "dash_alert_disc": "this map is add to list",
+  "dash_logout": "log out",
+  "dash_select": "Please select",
+  "dash_select_completed": "completed",
+  "dash_select_planned": "planned",
+  "dash_select_unfinished": "unfinished",
+  "dash_select_title": "category",
+  "dash_map_title": "title",
+  "dash_pins_add": "category",
+  "dash_image_drop": "Click or Drag & Drop an Map here",
+  "dash_Save": "Save",
+  "dash_delete": "delete",
 
-  "productView_color": "color",
-  "productView_size": "size",
-  "productView_button": "Add to card",
 
-  "shopCard_all": "all",
-  "shopCard_coupon": "coupon",
-  "shopCard_button": "submit",
-  "shopCard_number": "quantity",
-  "shopCard_price": "price",
-  "shopCard_delivery": "delivery"
+
+  "upload_image": "Upload Images"
 }
