add 3d video & about us page

--- a/client/locale/ar.json
+++ b/client/locale/ar.json
@@ -24,6 +24,8 @@
   "dash_image_drop": "انقر أو اسحب وأسقط خريطة هنا",
   "dash_Save": "حفظ",
   "dash_delete": "حذف",
+  "about": "معلومات عنا",
+  "3d_video": "فيديو ثلاثي الأبعاد",
 
   "upload_image": "رفع الصور"
 }
