--- a/client/locale/en.json
+++ b/client/locale/en.json
@@ -24,6 +24,8 @@
   "dash_image_drop": "Click or Drag & Drop an Map here",
   "dash_Save": "Save",
   "dash_delete": "delete",
+  "about": "about us",
+  "3d_video": "3d video",
 
 
 
